<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:layout_marginRight="100dp"
        android:layout_marginLeft="100dp"
        android:text="@string/enter_a_number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/mode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/input"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/radian"
            android:text="@string/radian"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_margin="10dp"
            android:checked="true"/>
        <RadioButton
            android:id="@+id/degree"
            android:text="@string/degree"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_margin="10dp"
            android:checked="false"/>

    </RadioGroup>

    <Button
        android:id="@+id/sin"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/sin"
        android:onClick="solve"
        android:tag="sin"
        android:layout_margin="5dp"
        app:layout_constraintTop_toBottomOf="@id/mode"
        app:layout_constraintRight_toLeftOf="@id/cos"
        app:layout_constraintLeft_toRightOf="parent" />

    <Button
        android:id="@+id/cos"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/cos"
        android:onClick="solve"
        android:tag="cos"
        android:layout_margin="5dp"
        app:layout_constraintTop_toBottomOf="@id/mode"
        app:layout_constraintLeft_toRightOf="@id/sin"
        app:layout_constraintRight_toLeftOf="@id/tan" />

    <Button
        android:id="@+id/tan"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/tan"
        android:onClick="solve"
        android:tag="tan"
        android:layout_margin="5dp"
        app:layout_constraintTop_toBottomOf="@id/mode"
        app:layout_constraintLeft_toRightOf="@id/cos"
        app:layout_constraintRight_toLeftOf="parent" />

    <Button
        android:id="@+id/arcsin"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/arcsin"
        android:onClick="solve"
        android:tag="arcsin"
        android:layout_margin="5dp"
        app:layout_constraintTop_toBottomOf="@id/sin"
        app:layout_constraintRight_toLeftOf="@id/arccos"
        app:layout_constraintLeft_toRightOf="parent" />

    <Button
        android:id="@+id/arccos"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/arccos"
        android:onClick="solve"
        android:tag="arccos"
        android:layout_margin="5dp"
        app:layout_constraintTop_toBottomOf="@id/cos"
        app:layout_constraintLeft_toRightOf="@id/arcsin"
        app:layout_constraintRight_toLeftOf="@id/arctan" />

    <Button
        android:id="@+id/arctan"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/arctan"
        android:onClick="solve"
        android:tag="arctan"
        android:layout_margin="5dp"
        app:layout_constraintTop_toBottomOf="@id/tan"
        app:layout_constraintLeft_toRightOf="@id/arccos"
        app:layout_constraintRight_toLeftOf="parent" />

    <Button
        android:id="@+id/clear"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/clear"
        android:onClick="clear"
        android:layout_margin="5dp"
        app:layout_constraintTop_toBottomOf="@id/arccos"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>